<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VirtualFrontView</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="action_settings">Setings</string>
    <string name="title_activity_server">ServerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_text">Welcome to Virtual Front View</string>
    <string name="server_button">Server</string>
    <string name="client_button">Client</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="bitrate_prompt">Bitrate</string>

    <string-array name="bitrate_array">
        <item>100000</item>
        <item>250000</item>
        <item>500000</item>
        <item>512000</item>
        <item>1000000</item>
        <item>1500000</item>
        <item>2000000</item>
    </string-array>

    <string name="resolution_prompt">Resolution</string>
    <string name="group_owner">You are the group owner.</string>
    <string name="wifi_connect_text">Connect</string>
    <string name="wifi_status_text">Connection status:</string>
    <string name="update_ip_text">Update IP</string>
    <string name="wifi_discoverable_text">Start Discovery</string>
    <string name="discovery_status_text">Discovery status:</string>
    <string name="stop_discovery_text">Stop Discovery</string>

    <string-array name="resolution_array">
        <item>176x144</item>
        <item>320x240</item>
        <item>480x320</item>
        <item>640x480</item>
        <item>800x480</item>
        <item>1280x720</item>
    </string-array>
    <string name="title_activity_client_latency">ClientLatencyActivity</string>
    <string name="latency_button">Latency</string>

</resources>