<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:color="@android:color/background_light" >

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/main_text"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/user_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/bitrate_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/bitrate_array"
                android:prompt="@string/bitrate_prompt" 
                android:visibility="visible"/>

            <Spinner
                android:id="@+id/resolution_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/resolution_array"
                android:prompt="@string/resolution_prompt"
                android:visibility="visible" />
        </LinearLayout>

        <Button
            android:id="@+id/server_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/server_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/ip_text"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="Enter source IP..."
                android:textSize="24sp" />

            <Button
                android:id="@+id/client_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/client_button" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>